@@ -1,4 +1,5 @@
-asyncio-mqtt
+#asyncio-mqtt
+aiomqtt
 asyncio-throttle
 paho-mqtt
 python-kasa
